Temporary commit for rewriting history

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ venv/               # Ignores the virtual environment folder, usually used to st
 .env                # Ignores the .env file, which typically contains environment variables
 __pycache__/        # Ignores the __pycache__ folder, which contains compiled Python bytecode
 *.pyc               # Ignores all files with the .pyc extension, which are compiled Python files
+.env
