--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ venv/               # Ignores the virtual environment folder, usually used to st
 __pycache__/        # Ignores the __pycache__ folder, which contains compiled Python bytecode
 *.pyc               # Ignores all files with the .pyc extension, which are compiled Python files
 .env
+migrations/
